fix on mobile size L

--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ nav a {
     height: 2rem;
   }
 }
-
+/* 
 @media only screen and (max-width: 425px) {
   header .content {
     display: flex;
@@ -109,9 +109,9 @@ nav a {
   nav li a {
     font-size: 0.65rem;
   }
-}
+} */
 
-@media only screen and (max-width: 375px) {
+@media only screen and (max-width: 425px) {
   header .content {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -121,6 +121,18 @@ nav a {
     grid-column: 1 / span 2;
     align-items: center;
     justify-content: center;
+  }
+  .header-logo {
+    padding: 0.5rem 0 0.5rem 0.5rem;
+  }
+  header h1 {
+    font-size: 0.85rem;
+  }
+  .header-nav {
+    padding-right: 0.5rem;
+  }
+  nav li a {
+    font-size: 0.65rem;
   }
 }
 
